--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gt15_node-servidor",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +14,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/filippemonteiro/gt15_node-servidor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/filippemonteiro/gt15_node-servidor/issues"
+  },
+  "homepage": "https://github.com/filippemonteiro/gt15_node-servidor#readme",
+  "description": ""
 }
